test(backend): re-add `TZ` to test scripts

--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -20,8 +20,8 @@
     "pre-commit": "lint-staged",
     "start": "node ./build/index.js",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "pnpm build && pnpm test:coverage --run",
-    "test:coverage": "vitest --coverage",
+    "test:ci": "TZ=America/Anchorage  pnpm build && pnpm test:coverage --run",
+    "test:coverage": "TZ=America/Anchorage vitest --coverage",
     "test:perf": "vitest --testMatch 'perf/**/*.test.ts'",
     "test:watch": "TZ=America/Anchorage vitest",
     "type-check": "tsc --build"
