--- a/apps/central-scan/backend/package.json
+++ b/apps/central-scan/backend/package.json
@@ -22,10 +22,9 @@
     "pre-commit": "lint-staged",
     "start": "node ./build/index.js",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:debug": "TZ=America/Anchorage node --inspect-brk $(which jest) --runInBand --no-cache",
-    "test:watch": "TZ=America/Anchorage jest --watch",
+    "test:ci": "TZ=America/Anchorage vitest run --coverage",
+    "test:coverage": "TZ=America/Anchorage vitest run --coverage",
+    "test:watch": "TZ=America/Anchorage vitest",
     "type-check": "tsc --build"
   },
   "dependencies": {
@@ -57,18 +56,16 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
-    "@jest/globals": "^29.6.2",
-    "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/luxon": "^3.0.0",
     "@types/node": "20.16.0",
     "@types/supertest": "^2.0.10",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/bmd-ballot-fixtures": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "esbuild": "0.21.2",
@@ -77,15 +74,12 @@
     "fast-check": "2.23.2",
     "get-port": "5",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
     "jest-image-snapshot": "^6.4.0",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "nodemon": "^3.1.7",
     "sort-package-json": "^1.50.0",
     "supertest": "^6.0.1",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 12"
