--- a/apps/central-scan/frontend/package.json
+++ b/apps/central-scan/frontend/package.json
@@ -109,8 +109,7 @@
     "sort-package-json": "^1.50.0",
     "type-fest": "^0.18.0",
     "vite": "4.5.2",
-    "vitest": "^2.1.8",
-    "vitest-styled-components": "^1.0.0"
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5",
   "vx": {
