--- a/libs/eslint-plugin-vx/package.json
+++ b/libs/eslint-plugin-vx/package.json
@@ -20,9 +20,9 @@
     "lint": "echo eslint-plugin-vs linting temporarily disabled",
     "lint:fix": "echo eslint-plugin-vs linting temporarily disabled",
     "test": "is-ci test:ci test:watch",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6"
+    "test:watch": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:ci": "vitest run --coverage"
   },
   "packageManager": "pnpm@8.15.5",
   "dependencies": {
@@ -42,15 +42,12 @@
     "typescript": "5.6.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
     "@types/react": "18.3.3",
     "@typescript-eslint/rule-tester": "^6.7.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "react": "18.3.1",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   }
 }
