--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -25,9 +25,8 @@
     "start": "PGUSER=design PGPASSWORD=design PGDATABASE=design ./scripts/start.sh",
     "test": "is-ci test:ci test:watch",
     "test:ci": "PGUSER=postgres PGDATABASE=circle_test TZ=America/Anchorage ./scripts/test_ci.sh",
-    "test:coverage": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage jest --coverage",
-    "test:debug": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage node --inspect-brk $(which jest) --runInBand --no-cache",
-    "test:watch": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage jest --watch",
+    "test:coverage": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage vitest --coverage",
+    "test:watch": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage vitest",
     "type-check": "tsc --build"
   },
   "dependencies": {
@@ -53,12 +52,9 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
-    "@jest/globals": "^29.6.2",
-    "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/lodash.get": "^4.4.9",
     "@types/node": "20.16.0",
@@ -66,6 +62,7 @@
     "@types/react": "18.3.3",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/ballot-interpreter": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/fs": "workspace:*",
@@ -75,16 +72,13 @@
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
     "jest-image-snapshot": "^6.4.0",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "lodash.get": "^4.4.2",
     "nodemon": "^3.1.7",
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 12"
