--- a/libs/bmd-ballot-fixtures/package.json
+++ b/libs/bmd-ballot-fixtures/package.json
@@ -21,9 +21,9 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:watch": "TZ=America/Anchorage jest --watch",
+    "test:coverage": "TZ=America/Anchorage vitest --coverage",
+    "test:ci": "TZ=America/Anchorage vitest run --coverage",
+    "test:watch": "TZ=America/Anchorage vitest",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
@@ -38,21 +38,18 @@
     "tmp": "^0.2.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/react": "18.3.3",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
     "jest-image-snapshot": "^6.4.0",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "vitest": "^2.1.8"
   },
   "peerDependencies": {
     "react": "18.3.1"
