--- a/libs/fixture-generators/package.json
+++ b/libs/fixture-generators/package.json
@@ -19,9 +19,9 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
+    "test:ci": "vitest run --coverage",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
@@ -44,22 +44,18 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
-    "@jest/globals": "^29.6.2",
     "@types/debug": "4.1.8",
-    "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
     "@types/yargs": "17.0.22",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "tmp": "^0.2.1",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 12"
