apps/design/backend: Configure Sentry

--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -30,6 +30,7 @@
     "type-check": "tsc --build"
   },
   "dependencies": {
+    "@sentry/node": "^8.51.0",
     "@votingworks/backend": "workspace:*",
     "@votingworks/basics": "workspace:*",
     "@votingworks/grout": "workspace:*",
