--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "dependencies": {
+    "@sentry/browser": "^8.51.0",
     "@tanstack/react-query": "4.32.1",
     "@tiptap/extension-bold": "^2.6.6",
     "@tiptap/extension-bullet-list": "^2.6.6",
