refactor(design): use `ElectionId` type for election IDs
Also removes a couple `as ElectionId` casts in favor of `unsafeParse` calls.

--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -86,7 +86,8 @@
     "react-router-dom": "^5.3.4",
     "sanitize-html": "^2.13.0",
     "styled-components": "^5.3.11",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "zod": "3.23.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
