--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -40,10 +40,12 @@
     "@votingworks/types": "workspace:*",
     "@votingworks/ui": "workspace:*",
     "@votingworks/utils": "workspace:*",
+    "auth0": "4.17.0",
     "debug": "4.3.4",
     "dotenv": "16.3.1",
     "dotenv-expand": "9.0.0",
     "express": "4.18.2",
+    "express-openid-connect": "2.17.1",
     "fs-extra": "11.1.1",
     "js-sha256": "^0.9.0",
     "jszip": "^3.9.1",
