--- a/apps/design/backend/tsconfig.json
+++ b/apps/design/backend/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../../tsconfig.shared.json",
-  "include": ["scripts", "src", "test"],
-  "exclude": [],
+  "//": "[TODO] Re-add tests",
+  "include": ["scripts", "src"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
