--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -30,6 +30,7 @@
     "type-check": "tsc --build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.735.0",
     "@sentry/node": "^8.51.0",
     "@votingworks/backend": "workspace:*",
     "@votingworks/basics": "workspace:*",
