--- a/Dockerfile.vxdesign
+++ b/Dockerfile.vxdesign
@@ -60,7 +60,7 @@ RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | b
   nvm install && \
   . ~/.bashrc && \
   node -v && \
-  corepack enable && \
+  npm i -g pnpm@8.15.5 && \
   pnpm -v
 
 COPY . .
