--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -50,6 +50,7 @@
     "fs-extra": "11.1.1",
     "js-sha256": "^0.9.0",
     "jszip": "^3.9.1",
+    "luxon": "^3.0.0",
     "pg": "^8.13.1",
     "react": "18.3.1",
     "uuid": "9.0.1",
@@ -61,6 +62,7 @@
     "@types/fs-extra": "11.0.1",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/lodash.get": "^4.4.9",
+    "@types/luxon": "^3.0.0",
     "@types/node": "20.16.0",
     "@types/pg": "^8.11.10",
     "@types/react": "18.3.3",
