--- a/apps/design/frontend/.eslintignore
+++ b/apps/design/frontend/.eslintignore
@@ -9,7 +9,17 @@
 *.config.ts
 /public
 
-# 🚨 [TODO] Re-enable
-test
-**/*.test.ts
-**/*.test.tsx
+src/app.test.tsx
+src/ballot_order_info_screen.test.tsx
+src/contests_screen.test.tsx
+src/ballot_screen.test.tsx
+src/tabulation_screen.test.tsx
+src/election_info_screen.test.tsx
+src/elections_screen.test.tsx
+src/ballots_screen.test.tsx
+src/geography_screen.test.tsx
+src/image_input.test.tsx
+src/features_context.test.tsx
+src/export_screen.test.tsx
+test/api_helpers.tsx
+test/fixtures.ts
