--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -23,7 +23,7 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "echo '🚨 TODO: Re-enable tests'",
+    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6 --passWithNoTests",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "type-check": "tsc --build"
