--- a/apps/design/frontend/tsconfig.json
+++ b/apps/design/frontend/tsconfig.json
@@ -14,9 +14,23 @@
     "skipLibCheck": true,
     "noUncheckedIndexedAccess": false
   },
-  "//": "[TODO] Re-add tests",
-  "include": ["src"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "include": ["src", "test"],
+  "exclude": [
+    "src/app.test.tsx",
+    "src/ballot_order_info_screen.test.tsx",
+    "src/contests_screen.test.tsx",
+    "src/ballot_screen.test.tsx",
+    "src/tabulation_screen.test.tsx",
+    "src/election_info_screen.test.tsx",
+    "src/elections_screen.test.tsx",
+    "src/ballots_screen.test.tsx",
+    "src/geography_screen.test.tsx",
+    "src/image_input.test.tsx",
+    "src/features_context.test.tsx",
+    "src/export_screen.test.tsx",
+    "test/api_helpers.tsx",
+    "test/fixtures.ts"
+  ],
   "references": [
     { "path": "../backend/tsconfig.build.json" },
     { "path": "../../../libs/basics/tsconfig.build.json" },
