test(design): partially re-enable `app.test.ts`
I fixed the ones that were easy.

--- a/apps/design/backend/tsconfig.json
+++ b/apps/design/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../../tsconfig.shared.json",
   "include": ["scripts", "src", "test"],
-  "exclude": ["src/app.test.ts", "test/helpers.ts"],
+  "exclude": [],
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
