--- a/libs/custom-paper-handler/package.json
+++ b/libs/custom-paper-handler/package.json
@@ -29,12 +29,14 @@
     "@votingworks/utils": "workspace:*",
     "buffer": "^6.0.3",
     "debug": "4.3.4",
+    "tmp": "^0.2.1",
     "usb": "^2.6.0",
     "wait-for-expect": "^3.0.2"
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
     "@types/node": "20.16.0",
+    "@types/tmp": "0.2.4",
     "@types/w3c-web-usb": "^1.0.6",
     "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/test-utils": "workspace:*",
