--- a/apps/design/frontend/tsconfig.json
+++ b/apps/design/frontend/tsconfig.json
@@ -15,11 +15,7 @@
     "noUncheckedIndexedAccess": false
   },
   "include": ["src", "test"],
-  "exclude": [
-    "src/app.test.tsx",
-    "src/contests_screen.test.tsx",
-    "src/geography_screen.test.tsx"
-  ],
+  "exclude": ["src/app.test.tsx", "src/geography_screen.test.tsx"],
   "references": [
     { "path": "../backend/tsconfig.build.json" },
     { "path": "../../../libs/basics/tsconfig.build.json" },
