--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -23,9 +23,9 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}' && stylelint 'src/**/*.css' --config .stylelintrc-css.js",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix && stylelint 'src/**/*.css' --config .stylelintrc-css.js --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
-    "test:watch": "TZ=America/Anchorage jest --watch",
+    "test:ci": "TZ=America/Anchorage vitest run --coverage",
+    "test:coverage": "TZ=America/Anchorage vitest --coverage",
+    "test:watch": "TZ=America/Anchorage vitest",
     "type-check": "tsc --build"
   },
   "browserslist": {
@@ -88,7 +88,6 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
@@ -97,7 +96,6 @@
     "@types/debug": "4.1.8",
     "@types/fetch-mock": "^7.3.2",
     "@types/history": "4.7.11",
-    "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
     "@types/luxon": "^3.0.0",
     "@types/node": "20.16.0",
@@ -111,6 +109,7 @@
     "@types/testing-library__jest-dom": "^5.14.9",
     "@types/uuid": "9.0.5",
     "@vitejs/plugin-react": "^1.3.2",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/admin-backend": "workspace:*",
     "@votingworks/backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
@@ -123,15 +122,10 @@
     "express": "4.18.2",
     "glob": "^8.0.3",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-styled-components": "^7.1.1",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5",
   "vx": {
