--- a/apps/mark/backend/package.json
+++ b/apps/mark/backend/package.json
@@ -19,10 +19,9 @@
     "pre-commit": "lint-staged",
     "start": "node ./build/index.js",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:debug": "node --inspect-brk $(which jest) --runInBand --no-cache",
-    "test:watch": "jest --watch",
+    "test:ci": "vitest run --coverage",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
     "type-check": "tsc --build"
   },
   "dependencies": {
@@ -49,31 +48,26 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
-    "@jest/globals": "^29.6.2",
-    "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
-    "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/luxon": "^3.0.0",
     "@types/node": "20.16.0",
     "@types/react": "18.3.3",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
     "jest-image-snapshot": "^6.4.0",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "nodemon": "^3.1.7",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 16"
