--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -62,7 +62,7 @@
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
     "@types/jest-image-snapshot": "^6.4.0",
@@ -78,7 +78,7 @@
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
     "@types/zip-stream": "workspace:*",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "csv-parse": "^5.5.0",
@@ -93,7 +93,7 @@
     "nodemon": "^3.1.7",
     "sort-package-json": "^1.50.0",
     "supertest": "^6.0.1",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "engines": {
     "node": ">= 16"
