--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -93,7 +93,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/base64-js": "^1.3.0",
     "@types/connect": "^3.4.35",
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/fetch-mock": "^7.3.2",
     "@types/history": "4.7.11",
     "@types/kiosk-browser": "workspace:*",
@@ -109,7 +109,7 @@
     "@types/testing-library__jest-dom": "^5.14.9",
     "@types/uuid": "9.0.5",
     "@vitejs/plugin-react": "^1.3.2",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/admin-backend": "workspace:*",
     "@votingworks/backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
@@ -125,7 +125,7 @@
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
     "vite": "4.5.2",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5",
   "vx": {
