--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -93,7 +93,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/history": "4.7.11",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -103,7 +103,7 @@
     "@types/testing-library__jest-dom": "^5.14.9",
     "@types/tmp": "0.2.4",
     "@vitejs/plugin-react": "^1.3.2",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/design-backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
@@ -118,7 +118,7 @@
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
     "vite": "4.5.2",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5",
   "vx": {
