--- a/apps/mark/backend/package.json
+++ b/apps/mark/backend/package.json
@@ -48,7 +48,7 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
     "@types/jest-image-snapshot": "^6.4.0",
@@ -56,7 +56,7 @@
     "@types/node": "20.16.0",
     "@types/react": "18.3.3",
     "@types/tmp": "0.2.4",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.21.2",
@@ -67,7 +67,7 @@
     "lint-staged": "11.0.0",
     "nodemon": "^3.1.7",
     "sort-package-json": "^1.50.0",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "engines": {
     "node": ">= 16"
