--- a/apps/scan/frontend/package.json
+++ b/apps/scan/frontend/package.json
@@ -72,7 +72,7 @@
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
     "@types/connect": "^3.4.35",
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/history": "4.7.11",
     "@types/kiosk-browser": "workspace:*",
     "@types/node": "20.16.0",
@@ -84,7 +84,7 @@
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^1.3.2",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
@@ -101,7 +101,7 @@
     "react-app-polyfill": "3.0.0",
     "sort-package-json": "^1.50.0",
     "vite": "4.5.2",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5",
   "vx": {
