--- a/docs/exercises/package.json
+++ b/docs/exercises/package.json
@@ -18,14 +18,14 @@
   },
   "dependencies": {
     "@types/node": "20.16.0",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/basics": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5"
 }
