--- a/libs/backend/package.json
+++ b/libs/backend/package.json
@@ -55,7 +55,7 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/fs-extra": "11.0.1",
     "@types/lodash.set": "^4.3.7",
     "@types/luxon": "^3.0.0",
@@ -65,7 +65,7 @@
     "@types/stream-chopper": "workspace:*",
     "@types/stream-json": "^1.7.3",
     "@types/tmp": "0.2.4",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/fs": "workspace:*",
     "@votingworks/hmpb": "workspace:*",
@@ -77,7 +77,7 @@
     "lodash.set": "^4.3.2",
     "memory-streams": "^0.1.3",
     "sort-package-json": "^1.50.0",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5"
 }
