--- a/libs/ballot-encoder/package.json
+++ b/libs/ballot-encoder/package.json
@@ -29,14 +29,14 @@
   "devDependencies": {
     "@types/node": "20.16.0",
     "@types/text-encoding": "^0.0.35",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/fixtures": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "engines": {
     "node": ">= 12"
