--- a/libs/basics/package.json
+++ b/libs/basics/package.json
@@ -27,13 +27,13 @@
   "devDependencies": {
     "@types/deep-eql": "^4.0.2",
     "@types/node": "20.16.0",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5"
 }
