--- a/libs/custom-scanner/package.json
+++ b/libs/custom-scanner/package.json
@@ -32,10 +32,10 @@
     "usb": "^2.6.0"
   },
   "devDependencies": {
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/node": "20.16.0",
     "@types/w3c-web-usb": "^1.0.6",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
@@ -43,7 +43,7 @@
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "vite": "4.5.2",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5"
 }
