--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -28,13 +28,13 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "7.6.3",
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/node": "20.16.0",
     "@types/tmp": "0.2.4",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "tmp": "^0.2.1",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   }
 }
