--- a/libs/fs/package.json
+++ b/libs/fs/package.json
@@ -34,10 +34,10 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/node": "20.16.0",
     "@types/tmp": "0.2.4",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
@@ -47,7 +47,7 @@
     "memory-streams": "^0.1.3",
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5"
 }
