--- a/libs/grout/package.json
+++ b/libs/grout/package.json
@@ -27,18 +27,18 @@
     "luxon": "^3.0.0"
   },
   "devDependencies": {
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/express": "4.17.14",
     "@types/luxon": "^3.0.0",
     "@types/node-fetch": "^2.6.0",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "eslint-plugin-vx": "workspace:*",
     "expect-type": "^0.15.0",
     "express": "4.18.2",
     "is-ci-cli": "2.2.0",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5"
 }
