--- a/libs/hmpb/package.json
+++ b/libs/hmpb/package.json
@@ -46,14 +46,14 @@
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "20.16.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/styled-components": "^5.1.26",
     "@types/tmp": "0.2.4",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/monorepo-utils": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.21.2",
@@ -66,7 +66,7 @@
     "tmp": "^0.2.1",
     "util": "^0.12.4",
     "vite": "4.5.2",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "engines": {
     "node": ">= 12"
