--- a/libs/image-utils/package.json
+++ b/libs/image-utils/package.json
@@ -31,13 +31,13 @@
     "tmp": "^0.2.1"
   },
   "devDependencies": {
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "20.16.0",
     "@types/pdfjs-dist": "2.1.3",
     "@types/pixelmatch": "^5.2.6",
     "@types/tmp": "0.2.4",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/fixtures": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
@@ -45,6 +45,6 @@
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "lint-staged": "11.0.0",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   }
 }
