--- a/libs/mark-flow-ui/package.json
+++ b/libs/mark-flow-ui/package.json
@@ -58,7 +58,7 @@
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
     "@types/base64-js": "^1.3.0",
-    "@types/debug": "4.1.8",
+    "@types/debug": "4.1.12",
     "@types/history": "4.7.11",
     "@types/kiosk-browser": "workspace:*",
     "@types/lodash.camelcase": "^4.3.6",
@@ -70,7 +70,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
@@ -95,7 +95,7 @@
     "styled-components": "^5.3.11",
     "util": "^0.12.4",
     "vite": "4.5.2",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "peerDependencies": {
     "react": "18.3.1",
