--- a/libs/monorepo-utils/package.json
+++ b/libs/monorepo-utils/package.json
@@ -27,7 +27,7 @@
     "@types/node": "20.16.0",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "3.0.6",
     "esbuild-runner": "2.2.2",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -41,7 +41,7 @@
     "prettier": "3.0.3",
     "sort-package-json": "^1.50.0",
     "typescript": "5.6.2",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "packageManager": "pnpm@8.15.5"
 }
