--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "stylelint": "^15.10.2",
     "stylelint-config-standard": "^34.0.0",
     "typescript": "5.6.2",
-    "vitest": "^2.1.8"
+    "vitest": "3.0.6"
   },
   "pnpm": {
     "overrides": {
