Add env var for electrical testing mode

--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ REACT_APP_VX_USE_BROTHER_PRINTER=FALSE
 REACT_APP_VX_USE_CUSTOM_SCANNER=FALSE
 REACT_APP_VX_ONLY_ENABLE_SCREEN_READER_FOR_HEADPHONES=FALSE
 REACT_APP_VX_HIDE_CURSOR=FALSE
+REACT_APP_VX_ENABLE_ELECTRICAL_TESTING_MODE=FALSE
