run prettier on save

--- a/libs/ui/.vscode/settings.json
+++ b/libs/ui/.vscode/settings.json
@@ -15,10 +15,10 @@
     "editor.formatOnSave": false
   },
   "[typescript]": {
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true
   },
   "[typescriptreact]": {
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true
   },
   "css.validate": false,
   "less.validate": false,
