design/backend: Configure PG client with `DATABASE_URL` env var
This is the default env var set by Heroku's Postgres add-on, so we can
use that instead of having to manually set `PGUSER`, `PGPASSWORD`, etc.
This will be particularly helpful for creating review apps.

--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -24,11 +24,11 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
-    "start": "PGUSER=design PGPASSWORD=design PGDATABASE=design ./scripts/start.sh",
+    "start": "./scripts/start.sh",
     "test": "is-ci test:ci test:watch",
     "test:ci": "PGUSER=postgres PGDATABASE=circle_test TZ=America/Anchorage ./scripts/test_ci.sh",
-    "test:coverage": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage vitest --coverage",
-    "test:watch": "PGUSER=design PGPASSWORD=design PGDATABASE=design TZ=America/Anchorage vitest",
+    "test:coverage": "TZ=America/Anchorage vitest --coverage",
+    "test:watch": "TZ=America/Anchorage vitest",
     "type-check": "tsc --build"
   },
   "dependencies": {
