--- a/apps/quickresults/frontend/package.json
+++ b/apps/quickresults/frontend/package.json
@@ -5,8 +5,7 @@
   "license": "GPL-3.0-only",
   "files": [
     "build",
-    "Makefile",
-    "prodserver"
+    "Makefile"
   ],
   "scripts": {
     "build": "is-ci build:ci build:dev",
@@ -53,8 +52,6 @@
     "debug": "4.3.4",
     "dotenv": "16.3.1",
     "dotenv-expand": "9.0.0",
-    "esbuild": "0.21.2",
-    "esbuild-runner": "2.2.2",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "pluralize": "8.0.0",
