--- a/apps/design/backend/.eslintrc.json
+++ b/apps/design/backend/.eslintrc.json
@@ -10,6 +10,12 @@
       "rules": {
         "no-console": "off"
       }
+    },
+    {
+      "files": ["migrations/**"],
+      "rules": {
+        "vx/gts-module-snake-case": "off"
+      }
     }
   ]
 }
