add basic server

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,5 @@
 build:
   docker:
     web: Dockerfile.quickresults
+run:
+  web: node /vx/code/vxsuite/apps/quickresults/frontend/prodserver index.js
