Add 'view schema' script, update documentation, rm unused migration

--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -21,10 +21,12 @@
     "create-user": "node -r esbuild-runner/register ./scripts/create_user.ts",
     "db:migrations:create": "node-pg-migrate create",
     "db:migrations:run": "node-pg-migrate up",
-    "db:migrations:run-dev": "DATABASE_URL='postgresql://design:design@localhost:5432/design' node-pg-migrate up",
+    "db:migrations:run-dev": "DATABASE_URL='postgres://design:design@localhost:5432/design' pnpm db:migrations:run",
     "db:migrations:undo-last": "node-pg-migrate down",
-    "db:migrations:undo-last-dev": "DATABASE_URL='postgresql://design:design@localhost:5432/design' node-pg-migrate down",
+    "db:migrations:undo-last-dev": "DATABASE_URL='postgres://design:design@localhost:5432/design' pnpm db:migrations:undo-last",
     "db:reset-dev": "./scripts/db_reset_dev.sh",
+    "db:schema": "pg_dump --schema-only -d",
+    "db:schema-dev": "pg_dump 'postgres://design:design@localhost:5432/design'",
     "format": "prettier '**/*.+(css|graphql|json|less|md|mdx|sass|scss|yaml|yml)' --write",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
